# legged_rl_deploy

./: .gitignore  CMakeLists.txt  LibTorch.md  README.md  TorchScript.md  package.xml
cmake/: legged_rl_deployConfig.cmake.in
config/: g1-velocity-unitree_rl_mjlab.yaml  go2-handstand.yaml  go2-jump.yaml  go2-legstand.yaml  go2-spring_jump.yaml  go2-trot.yaml  go2-velocity-mjlab.yaml  go2-velocity-unitree.yaml  go2-velocity.yaml
include/legged_rl_deploy/: action_processor.h  deploy_config.h  deploy_config_loader.h  legged_rl_deploy.h  observation_assembler.h  observation_registry.h  policy_slot.h  processor.h
include/legged_rl_deploy/motion/: local_mimic_adapter.h  mimic_source.h  motion_loader.h  redis_mimic_adapter.h
include/legged_rl_deploy/policy/: i_policy_runner.h  ort_policy_runner.h  policy_factory.h  torch_policy_runner.h
policies/: go2_legstand.onnx  go2_velocity_unitree.pt
policies/g1/: multi-policies.yaml
policies/go2/: multi-policies.yaml
policies/go2/handstand/: config.yaml  policy.onnx
policies/go2/hop/: config.yaml  policy.onnx
policies/go2/legstand/: config.yaml
policies/go2/spring_jump/: config.yaml  (+1 more)
scripts/: check_npz.py  check_onnx.py  compare_csv_onnx.py  get_ort.sh  get_torch.sh  pt_to_onnx.py  pt_to_onnx_uv.sh  run.sh  verify_onnx_independence.py
src/: legged_rl_deploy.cpp  legged_rl_deploy_node.cpp  observation_assembler.cpp  policy_slot.cpp
src/motion/: cnpy.cpp  local_mimic_adapter.cpp  motion_onnx_loader.cpp  redis_mimic_adapter.cpp
src/policy/: ort_policy_runner.cpp  policy_factory.cpp  torch_policy_runner.cpp
(+21 files in other folders)
