<?xml version="1.0"?>
<package format="2">
    <name>legged_rl_deploy</name>
    <version>0.0.0</version>
    <description>RL deployment code for legged robots.</description>
    <maintainer email="rkzdtc@gmail.com">Kunzhao Ren</maintainer>
    <license>BSD</license>

    <!-- <buildtool_depend>catkin</buildtool_depend> -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>unitree_lowlevel</depend>
    <depend>legged_model</depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
